# manchester

./: CMakeLists.txt  README.md  vcpkgs.txt
docs/diagrams/src/: decoder_states.puml  encoder_states.puml
src/: CMakeLists.txt  coserializer.py  encoder.cpp
src/encoder/: encodercontext.cpp  encodercontext.hpp  encoderstate.hpp  quiescenthistate.cpp  quiescenthistate.hpp  quiescentlostate.cpp  quiescentlostate.hpp
src/fsm/: actions.hpp  statemachine.hpp
tests/: CMakeLists.txt
tests/encoder/: encodertests.cpp
